fix alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,2 +1,3 @@
 #doctorList li { color: blue; }
 #doctorList li:hover { color: green; cursor: pointer; }
+.custom-well { min-height: 250px; }
